--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
   </style>
 </head>
 <body>
+  
+  <script>
+  (function(){
+    var fullres = document.createElement('script');
+    fullres.async = true;
+    fullres.src = 'https://t.fullres.net/snailradjhbio.js?'+(new Date()-new Date()%43200000);
+    document.head.appendChild(fullres);
+  })();
+</script>
+
   <h1>You are about to be redirected</h1>
   <p>Click the button below to continue:</p>
   <a href="https://otieu.com/4/7128796" class="redirect-button">Go to Destination</a>
